--- a/Work.html
+++ b/Work.html
@@ -15,7 +15,7 @@
         <div class="page-container">
         <nav>
             <button id="darkModeToggle" aria-pressed="false" aria-label="Toggle dark mode">Toggle Dark Mode 🌙</button>
-            <a href="Home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="Work.html" aria-current="page">More About My Work</a>
         </nav>
 
